Merge changes from trunk@953249.
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/java/branches/java6@953293 13f79535-47bb-0310-9956-ffa450edef68